[project]
name = "llonebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
start = "bridge_openclaw_llonebot:cli"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]

[tool.setuptools]
py-modules = [
    "bridge_openclaw_llonebot",
    "bridge_core",
    "bridge_logging",
    "bridge_config",
    "bridge_models",
    "bridge_onebot_mixin",
    "bridge_openclaw_mixin",
    "main",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
